Data collection through Google Maps API

--- a/New data Collection function .ipynb
+++ b/New data Collection function .ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1aa5e9ef",
+   "execution_count": 4,
+   "id": "3f6a4e35",
    "metadata": {},
    "outputs": [
     {
@@ -26,75 +26,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3f0c1fae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "aa4c2a6f",
+   "execution_count": 8,
+   "id": "a5714b75",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: googlemaps\n",
-      "Version: 4.10.0\n",
-      "Summary: Python client library for Google Maps Platform\n",
-      "Home-page: https://github.com/googlemaps/google-maps-services-python\n",
-      "Author: \n",
-      "Author-email: \n",
-      "License: Apache 2.0\n",
-      "Location: /Users/kruthikaramesh/opt/anaconda3/envs/newenv/lib/python3.11/site-packages\n",
-      "Requires: requests\n",
-      "Required-by: \n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Total results retrieved: 8000\n"
      ]
     }
    ],
-   "source": [
-    "pip show googlemaps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "8194cc7c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import googlemaps\n",
-    "import csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "6353fa4a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api_key = 'API_KEY'\n",
-    "gmaps = googlemaps.Client(key=api_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9938febf",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import csv\n",
     "import time\n",
     "import googlemaps\n",
     "\n",
     "# Set up Google Maps API client\n",
-    "api_key = 'API_KEY'\n",
+    "api_key = 'API - Key'\n",
     "gmaps = googlemaps.Client(api_key)\n",
     "\n",
     "# Define the parameters\n",
@@ -113,16 +63,16 @@
     "    longitude = None\n",
     "\n",
     "# Divide the search area into smaller regions\n",
-    "region_divisions = 50\n",
+    "region_divisions = 20\n",
     "region_radius = radius // region_divisions\n",
     "\n",
     "# Retrieve results for each region\n",
     "all_results = []\n",
     "\n",
     "for i in range(region_divisions):\n",
-    "    region_latitude = latitude + ((i - region_divisions // 2) * 0.08)  # Adjust the latitude division size as needed\n",
+    "    region_latitude = latitude + ((i - region_divisions // 2) * 0.03)  # Adjust the latitude division size as needed\n",
     "    for j in range(region_divisions):\n",
-    "        region_longitude = longitude + ((j - region_divisions // 2) * 0.08)  # Adjust the longitude division size as needed\n",
+    "        region_longitude = longitude + ((j - region_divisions // 2) * 0.03)  # Adjust the longitude division size as needed\n",
     "        \n",
     "        # Perform the search query for the current region\n",
     "        response = gmaps.places(query=keyword, location=(region_latitude, region_longitude), radius=region_radius)\n",
@@ -134,7 +84,7 @@
     "    \n",
     "\n",
     "# Save the results to a CSV file\n",
-    "csv_file = 'restaurant_data.csv'\n",
+    "csv_file = 'new restaurant_data.csv'\n",
     "field_names = ['Name', 'Address', 'Website', 'Price Level', 'Reviews', 'Cuisine Types', 'Menu', 'Latitude', 'Longitude']\n",
     "\n",
     "with open(csv_file, mode='w', encoding='utf-8', newline='') as file:\n",
@@ -170,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3d6ccfe",
+   "id": "7c486120",
    "metadata": {},
    "outputs": [],
    "source": []
